@@ -1,3 +1,6 @@
+=== 2017-01-17
+* Enhancements
+  * Added :using_params parameter to both on_page and if_page methods
 === Version-1.1.7/2017-01-16
 * Enhancements
   * Updated expected_element to use the global default element wait by default
